// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultsTable tests should load the ResultTable component 1`] = `
<Segment>
  <Header
    as="h3"
  >
    results
  </Header>
  <Message
    data-test="no-results"
  >
    There are no 
    results
  </Message>
</Segment>
`;

exports[`ResultsTable tests should not render the show all button when showing only a few rows 1`] = `
<ResultsTable
  actionClickHandler={[Function]}
  actionComponent={null}
  history={[Function]}
  name="results"
  rows={
    Array [
      Object {
        "ID": "loan1",
        "end_date": "2018-01-01",
        "patron_pid": "patron_1",
        "start_date": "2018-01-01",
        "updated": "2018-01-01",
      },
      Object {
        "ID": "loan2",
        "end_date": "2018-01-01",
        "patron_pid": "patron_2",
        "start_date": "2018-01-01",
        "updated": "2018-01-01",
      },
    ]
  }
  showMaxRows={3}
>
  <Segment>
    <div
      className="ui segment"
    >
      <Header
        as="h3"
      >
        <h3
          className="ui header"
        >
          results
        </h3>
      </Header>
      <Table
        as="table"
        selectable={true}
        striped={true}
      >
        <table
          className="ui selectable striped table"
        >
          <ResultsTableHeader
            columns={
              Array [
                "ID",
                "patron_pid",
                "updated",
                "start_date",
                "end_date",
              ]
            }
          >
            <TableHeader
              as="thead"
            >
              <thead
                className=""
              >
                <TableRow
                  as="tr"
                  cellAs="td"
                  data-test="header"
                >
                  <tr
                    className=""
                    data-test="header"
                  >
                    <TableHeaderCell
                      as="th"
                      collapsing={true}
                      width={2}
                    >
                      <TableCell
                        as="th"
                        className=""
                        collapsing={true}
                        width={2}
                      >
                        <th
                          className="collapsing two wide"
                        />
                      </TableCell>
                    </TableHeaderCell>
                    <TableHeaderCell
                      as="th"
                      key="ID"
                      width={2}
                    >
                      <TableCell
                        as="th"
                        className=""
                        width={2}
                      >
                        <th
                          className="two wide"
                        >
                          ID
                        </th>
                      </TableCell>
                    </TableHeaderCell>
                    <TableHeaderCell
                      as="th"
                      key="patron_pid"
                    >
                      <TableCell
                        as="th"
                        className=""
                      >
                        <th
                          className=""
                        >
                          patron_pid
                        </th>
                      </TableCell>
                    </TableHeaderCell>
                    <TableHeaderCell
                      as="th"
                      key="updated"
                    >
                      <TableCell
                        as="th"
                        className=""
                      >
                        <th
                          className=""
                        >
                          updated
                        </th>
                      </TableCell>
                    </TableHeaderCell>
                    <TableHeaderCell
                      as="th"
                      key="start_date"
                    >
                      <TableCell
                        as="th"
                        className=""
                      >
                        <th
                          className=""
                        >
                          start_date
                        </th>
                      </TableCell>
                    </TableHeaderCell>
                    <TableHeaderCell
                      as="th"
                      key="end_date"
                    >
                      <TableCell
                        as="th"
                        className=""
                      >
                        <th
                          className=""
                        >
                          end_date
                        </th>
                      </TableCell>
                    </TableHeaderCell>
                  </tr>
                </TableRow>
              </thead>
            </TableHeader>
          </ResultsTableHeader>
          <ResultsTableBody
            actionClickHandler={[Function]}
            actionComponent={null}
            columns={
              Array [
                "ID",
                "patron_pid",
                "updated",
                "start_date",
                "end_date",
              ]
            }
            rows={
              Array [
                Object {
                  "ID": "loan1",
                  "end_date": "2018-01-01",
                  "patron_pid": "patron_1",
                  "start_date": "2018-01-01",
                  "updated": "2018-01-01",
                },
                Object {
                  "ID": "loan2",
                  "end_date": "2018-01-01",
                  "patron_pid": "patron_2",
                  "start_date": "2018-01-01",
                  "updated": "2018-01-01",
                },
              ]
            }
          >
            <TableBody
              as="tbody"
            >
              <tbody
                className=""
              >
                <TableRow
                  as="tr"
                  cellAs="td"
                  data-test="loan1"
                  key="loan1"
                >
                  <tr
                    className=""
                    data-test="loan1"
                  >
                    <TableCell
                      as="td"
                      key="details"
                      textAlign="center"
                    >
                      <td
                        className="center aligned"
                      >
                        <Button
                          as="button"
                          circular={true}
                          compact={true}
                          icon="eye"
                          onClick={[Function]}
                        >
                          <button
                            className="ui circular compact icon button"
                            onClick={[Function]}
                          >
                            <Icon
                              as="i"
                              name="eye"
                            >
                              <i
                                aria-hidden="true"
                                className="eye icon"
                              />
                            </Icon>
                          </button>
                        </Button>
                      </td>
                    </TableCell>
                    <TableCell
                      as="td"
                      data-test="ID-loan1"
                      key="0-loan1"
                    >
                      <td
                        className=""
                        data-test="ID-loan1"
                      >
                        loan1
                      </td>
                    </TableCell>
                    <TableCell
                      as="td"
                      data-test="patron_pid-loan1"
                      key="1-loan1"
                    >
                      <td
                        className=""
                        data-test="patron_pid-loan1"
                      >
                        patron_1
                      </td>
                    </TableCell>
                    <TableCell
                      as="td"
                      data-test="updated-loan1"
                      key="2-loan1"
                    >
                      <td
                        className=""
                        data-test="updated-loan1"
                      >
                        2018-01-01
                      </td>
                    </TableCell>
                    <TableCell
                      as="td"
                      data-test="start_date-loan1"
                      key="3-loan1"
                    >
                      <td
                        className=""
                        data-test="start_date-loan1"
                      >
                        2018-01-01
                      </td>
                    </TableCell>
                    <TableCell
                      as="td"
                      data-test="end_date-loan1"
                      key="4-loan1"
                    >
                      <td
                        className=""
                        data-test="end_date-loan1"
                      >
                        2018-01-01
                      </td>
                    </TableCell>
                  </tr>
                </TableRow>
                <TableRow
                  as="tr"
                  cellAs="td"
                  data-test="loan2"
                  key="loan2"
                >
                  <tr
                    className=""
                    data-test="loan2"
                  >
                    <TableCell
                      as="td"
                      key="details"
                      textAlign="center"
                    >
                      <td
                        className="center aligned"
                      >
                        <Button
                          as="button"
                          circular={true}
                          compact={true}
                          icon="eye"
                          onClick={[Function]}
                        >
                          <button
                            className="ui circular compact icon button"
                            onClick={[Function]}
                          >
                            <Icon
                              as="i"
                              name="eye"
                            >
                              <i
                                aria-hidden="true"
                                className="eye icon"
                              />
                            </Icon>
                          </button>
                        </Button>
                      </td>
                    </TableCell>
                    <TableCell
                      as="td"
                      data-test="ID-loan2"
                      key="0-loan2"
                    >
                      <td
                        className=""
                        data-test="ID-loan2"
                      >
                        loan2
                      </td>
                    </TableCell>
                    <TableCell
                      as="td"
                      data-test="patron_pid-loan2"
                      key="1-loan2"
                    >
                      <td
                        className=""
                        data-test="patron_pid-loan2"
                      >
                        patron_2
                      </td>
                    </TableCell>
                    <TableCell
                      as="td"
                      data-test="updated-loan2"
                      key="2-loan2"
                    >
                      <td
                        className=""
                        data-test="updated-loan2"
                      >
                        2018-01-01
                      </td>
                    </TableCell>
                    <TableCell
                      as="td"
                      data-test="start_date-loan2"
                      key="3-loan2"
                    >
                      <td
                        className=""
                        data-test="start_date-loan2"
                      >
                        2018-01-01
                      </td>
                    </TableCell>
                    <TableCell
                      as="td"
                      data-test="end_date-loan2"
                      key="4-loan2"
                    >
                      <td
                        className=""
                        data-test="end_date-loan2"
                      >
                        2018-01-01
                      </td>
                    </TableCell>
                  </tr>
                </TableRow>
              </tbody>
            </TableBody>
          </ResultsTableBody>
          <ResultsTableFooter
            allRowsNumber={2}
            columnsNumber={5}
            showMaxRows={3}
          />
        </table>
      </Table>
    </div>
  </Segment>
</ResultsTable>
`;

exports[`ResultsTable tests should render the show all button when showing only a few rows 1`] = `
<ResultsTable
  actionClickHandler={[Function]}
  actionComponent={null}
  history={[Function]}
  name="results"
  rows={
    Array [
      Object {
        "ID": "1",
        "end_date": "2018-01-01",
        "loan_pid": "loan1",
        "patron_pid": "patron_1",
        "start_date": "2018-01-01",
        "updated": "2018-01-01",
      },
      Object {
        "ID": "2",
        "end_date": "2018-01-01",
        "loan_pid": "loan2",
        "patron_pid": "patron_2",
        "start_date": "2018-01-01",
        "updated": "2018-01-01",
      },
    ]
  }
  showAllButton={
    <Button
      as="button"
      onClick={[Function]}
      size="small"
    >
      Show all
    </Button>
  }
  showMaxRows={1}
>
  <Segment>
    <div
      className="ui segment"
    >
      <Header
        as="h3"
      >
        <h3
          className="ui header"
        >
          results
        </h3>
      </Header>
      <Table
        as="table"
        selectable={true}
        striped={true}
      >
        <table
          className="ui selectable striped table"
        >
          <ResultsTableHeader
            columns={
              Array [
                "loan_pid",
                "ID",
                "patron_pid",
                "updated",
                "start_date",
                "end_date",
              ]
            }
          >
            <TableHeader
              as="thead"
            >
              <thead
                className=""
              >
                <TableRow
                  as="tr"
                  cellAs="td"
                  data-test="header"
                >
                  <tr
                    className=""
                    data-test="header"
                  >
                    <TableHeaderCell
                      as="th"
                      collapsing={true}
                      width={2}
                    >
                      <TableCell
                        as="th"
                        className=""
                        collapsing={true}
                        width={2}
                      >
                        <th
                          className="collapsing two wide"
                        />
                      </TableCell>
                    </TableHeaderCell>
                    <TableHeaderCell
                      as="th"
                      key="loan_pid"
                    >
                      <TableCell
                        as="th"
                        className=""
                      >
                        <th
                          className=""
                        >
                          loan_pid
                        </th>
                      </TableCell>
                    </TableHeaderCell>
                    <TableHeaderCell
                      as="th"
                      key="ID"
                      width={2}
                    >
                      <TableCell
                        as="th"
                        className=""
                        width={2}
                      >
                        <th
                          className="two wide"
                        >
                          ID
                        </th>
                      </TableCell>
                    </TableHeaderCell>
                    <TableHeaderCell
                      as="th"
                      key="patron_pid"
                    >
                      <TableCell
                        as="th"
                        className=""
                      >
                        <th
                          className=""
                        >
                          patron_pid
                        </th>
                      </TableCell>
                    </TableHeaderCell>
                    <TableHeaderCell
                      as="th"
                      key="updated"
                    >
                      <TableCell
                        as="th"
                        className=""
                      >
                        <th
                          className=""
                        >
                          updated
                        </th>
                      </TableCell>
                    </TableHeaderCell>
                    <TableHeaderCell
                      as="th"
                      key="start_date"
                    >
                      <TableCell
                        as="th"
                        className=""
                      >
                        <th
                          className=""
                        >
                          start_date
                        </th>
                      </TableCell>
                    </TableHeaderCell>
                    <TableHeaderCell
                      as="th"
                      key="end_date"
                    >
                      <TableCell
                        as="th"
                        className=""
                      >
                        <th
                          className=""
                        >
                          end_date
                        </th>
                      </TableCell>
                    </TableHeaderCell>
                  </tr>
                </TableRow>
              </thead>
            </TableHeader>
          </ResultsTableHeader>
          <ResultsTableBody
            actionClickHandler={[Function]}
            actionComponent={null}
            columns={
              Array [
                "loan_pid",
                "ID",
                "patron_pid",
                "updated",
                "start_date",
                "end_date",
              ]
            }
            rows={
              Array [
                Object {
                  "ID": "1",
                  "end_date": "2018-01-01",
                  "loan_pid": "loan1",
                  "patron_pid": "patron_1",
                  "start_date": "2018-01-01",
                  "updated": "2018-01-01",
                },
              ]
            }
          >
            <TableBody
              as="tbody"
            >
              <tbody
                className=""
              >
                <TableRow
                  as="tr"
                  cellAs="td"
                  data-test="1"
                  key="1"
                >
                  <tr
                    className=""
                    data-test="1"
                  >
                    <TableCell
                      as="td"
                      key="details"
                      textAlign="center"
                    >
                      <td
                        className="center aligned"
                      >
                        <Button
                          as="button"
                          circular={true}
                          compact={true}
                          icon="eye"
                          onClick={[Function]}
                        >
                          <button
                            className="ui circular compact icon button"
                            onClick={[Function]}
                          >
                            <Icon
                              as="i"
                              name="eye"
                            >
                              <i
                                aria-hidden="true"
                                className="eye icon"
                              />
                            </Icon>
                          </button>
                        </Button>
                      </td>
                    </TableCell>
                    <TableCell
                      as="td"
                      data-test="loan_pid-1"
                      key="0-1"
                    >
                      <td
                        className=""
                        data-test="loan_pid-1"
                      >
                        loan1
                      </td>
                    </TableCell>
                    <TableCell
                      as="td"
                      data-test="ID-1"
                      key="1-1"
                    >
                      <td
                        className=""
                        data-test="ID-1"
                      >
                        1
                      </td>
                    </TableCell>
                    <TableCell
                      as="td"
                      data-test="patron_pid-1"
                      key="2-1"
                    >
                      <td
                        className=""
                        data-test="patron_pid-1"
                      >
                        patron_1
                      </td>
                    </TableCell>
                    <TableCell
                      as="td"
                      data-test="updated-1"
                      key="3-1"
                    >
                      <td
                        className=""
                        data-test="updated-1"
                      >
                        2018-01-01
                      </td>
                    </TableCell>
                    <TableCell
                      as="td"
                      data-test="start_date-1"
                      key="4-1"
                    >
                      <td
                        className=""
                        data-test="start_date-1"
                      >
                        2018-01-01
                      </td>
                    </TableCell>
                    <TableCell
                      as="td"
                      data-test="end_date-1"
                      key="5-1"
                    >
                      <td
                        className=""
                        data-test="end_date-1"
                      >
                        2018-01-01
                      </td>
                    </TableCell>
                  </tr>
                </TableRow>
              </tbody>
            </TableBody>
          </ResultsTableBody>
          <ResultsTableFooter
            allRowsNumber={2}
            columnsNumber={6}
            showAllButton={
              <Button
                as="button"
                onClick={[Function]}
                size="small"
              >
                Show all
              </Button>
            }
            showMaxRows={1}
          >
            <TableFooter
              as="tfoot"
              data-test="footer"
              fullWidth={true}
            >
              <TableHeader
                as="tfoot"
                data-test="footer"
                fullWidth={true}
              >
                <tfoot
                  className="full-width"
                  data-test="footer"
                >
                  <TableRow
                    as="tr"
                    cellAs="td"
                  >
                    <tr
                      className=""
                    >
                      <TableHeaderCell
                        as="th"
                        colSpan={7}
                        textAlign="right"
                      >
                        <TableCell
                          as="th"
                          className=""
                          colSpan={7}
                          textAlign="right"
                        >
                          <th
                            className="right aligned"
                            colSpan={7}
                          >
                            <span>
                              Showing first 
                              1
                               entries of
                               
                              2
                               
                            </span>
                            <span>
                              <Button
                                as="button"
                                onClick={[Function]}
                                size="small"
                              >
                                <button
                                  className="ui small button"
                                  onClick={[Function]}
                                >
                                  Show all
                                </button>
                              </Button>
                            </span>
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                    </tr>
                  </TableRow>
                </tfoot>
              </TableHeader>
            </TableFooter>
          </ResultsTableFooter>
        </table>
      </Table>
    </div>
  </Segment>
</ResultsTable>
`;
